# OS-Experiment

./: .gitignore  CMakeLists.txt  README.md  demo_output.txt  run_demo.bat  run_demo.sh
docs/: design.md
include/: MemoryManager.h  MiniOS.h  Process.h  Scheduler.h
src/: MemoryManager.cpp  MiniOS.cpp  Process.cpp  Scheduler.cpp  main.cpp
